--- a/org/agenda.org
+++ b/org/agenda.org
@@ -748,14 +748,17 @@ other, regularized. ([[https://www.amphilsoc.org/item-detail/photograph-john-wil
 
 - If you don't know what all this means - ASK ME!
 
-* TODO Lecture & practice: measures of spread
-* TODO Practice 4 summary stats review
+* TODO (Tue) Practice 4 summary stats review
 #+attr_html: :width 300px
 [[../img/w6_gnome.jpg]]
-* TODO Test 6 review
+* TODO (Tue) Lecture & practice: measures of spread
+* TODO (Thu) Test 6 review
 #+attr_html: :width 300px
 [[../img/4_barchick.png]]
 
+* TODO (Thu) Lab session / project review
+* TODO What did you learn so far?
+* Week 8: covariance and correlation
 * TODO DataCamp Reviews: Central Limit Theorem/Tests
 * References
 #+attr_html: :width 500px
