--- a/org/5_spread.org
+++ b/org/5_spread.org
@@ -1,4 +1,4 @@
-#+TITLE: MEASURES OF SPREAD, COVARIANCE, CORRELATION, OUTLIERS
+#+TITLE: MEASURES OF SPREAD AND CORRELATION
 #+AUTHOR: MARCUS BIRKENKRAHE
 #+SUBTITLE: Applied math for data science (DSC 482/MTH 445) Fall 2022
 #+attr_html: :width 700px
